Put links title back for mobile

--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -273,6 +273,7 @@
                             </div>
                             <div class="col-12 col-lg-5">
 
+                                <h6 class="mb-1 mt-3 d-lg-none">Links</h6>
                                 <div id="links" class="mb-3">
                                     {{ range .Links }}
                                         {{ if not .Hide }}
