Show completed percent on player achievements

--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -630,6 +630,7 @@
                                                 <tr>
                                                     <th scope="col">Achievement</th>
                                                     <th scope="col">Date</th>
+                                                    <th scope="col">Completed</th>
                                                 </tr>
                                                 </thead>
                                                 <tbody>
