--- a/cmd/webserver/templates/_header.gohtml
+++ b/cmd/webserver/templates/_header.gohtml
@@ -215,10 +215,13 @@
 
                             <a class="dropdown-item" href="/discord-server" target="_blank" rel="noopener">Discord Server</a>
                             <a class="dropdown-item" href="/discord-bot">Discord Bot</a>
-                            <a class="dropdown-item" href="/contact">Contact</a>
-                            <a class="dropdown-item" href="/info">Info</a>
+
+                            <div class="dropdown-divider"></div>
+
                             <a class="dropdown-item" href="/experience">Experience Table</a>
                             <a class="dropdown-item" href="/achievements">Achievements Search</a>
+                            <a class="dropdown-item" href="/contact">Contact</a>
+                            <a class="dropdown-item" href="/info">Info</a>
 
                             <div class="dropdown-divider"></div>
 
