Stats page updates

--- a/cmd/webserver/assets/sass/_stats.scss
+++ b/cmd/webserver/assets/sass/_stats.scss
@@ -9,6 +9,10 @@
     }
 
     .chart {
-        height: 300px;
+        height: 350px;
+    }
+
+    #release-dates, #client-players2 {
+        cursor: ew-resize;
     }
 }
