Update player nav

--- a/cmd/webserver/assets/sass/_player.scss
+++ b/cmd/webserver/assets/sass/_player.scss
@@ -11,9 +11,9 @@
         }
     }
 
-    #charts {
-        div {
-            height: 250px;
+    #history {
+        #history-chart, #ranks-chart {
+            height: 250px; 
         }
     }
 
