Update table borders

--- a/cmd/webserver/assets/sass/_tables.scss
+++ b/cmd/webserver/assets/sass/_tables.scss
@@ -8,38 +8,38 @@ ul.pagination li.donate {
 }
 
 // Border radius table corners
-table.table:not(.fixedHeader-floating) {
-
-    thead {
-        tr:first-child {
-            th:first-child, td:first-child {
-                -webkit-border-top-left-radius: 5px;
-                -moz-border-radius-topleft: 5px;
-                border-top-left-radius: 5px;
-            }
-
-            th:last-child, td:last-child {
-                -webkit-border-top-right-radius: 5px;
-                -moz-border-radius-topright: 5px;
-                border-top-right-radius: 5px;
-            }
-        }
-
-        tr:last-child {
-            td:first-child {
-                -webkit-border-bottom-left-radius: 5px;
-                -moz-border-radius-bottomleft: 5px;
-                border-bottom-left-radius: 5px;
-            }
-
-            td:last-child {
-                -webkit-border-bottom-right-radius: 5px;
-                -moz-border-radius-bottomright: 5px;
-                border-bottom-right-radius: 5px;
-            }
-        }
-    }
-}
+//table.table:not(.fixedHeader-floating) {
+//
+//    thead {
+//        tr:first-child {
+//            th:first-child, td:first-child {
+//                -webkit-border-top-left-radius: 5px;
+//                -moz-border-radius-topleft: 5px;
+//                border-top-left-radius: 5px;
+//            }
+//
+//            th:last-child, td:last-child {
+//                -webkit-border-top-right-radius: 5px;
+//                -moz-border-radius-topright: 5px;
+//                border-top-right-radius: 5px;
+//            }
+//        }
+//
+//        tr:last-child {
+//            td:first-child {
+//                -webkit-border-bottom-left-radius: 5px;
+//                -moz-border-radius-bottomleft: 5px;
+//                border-bottom-left-radius: 5px;
+//            }
+//
+//            td:last-child {
+//                -webkit-border-bottom-right-radius: 5px;
+//                -moz-border-radius-bottomright: 5px;
+//                border-bottom-right-radius: 5px;
+//            }
+//        }
+//    }
+//}
 
 // TH padding
 table.table.dataTable {
@@ -50,6 +50,9 @@ table.table.dataTable {
 
 //
 table.table {
+
+    border: 1px solid rgba(0, 0, 0, .125);
+    border-radius: .25rem;
 
     thead {
         th {
