--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -216,7 +216,10 @@
                                             </div>
                                         </div>
 
-                                        <div class="card mb-4 mb-lg-0">
+                                    </div>
+                                    <div class="col-sm-12 col-lg-6">
+
+                                        <div class="card mb-4">
                                             <h5 class="card-header">Links</h5>
                                             <div class="card-body pb-2">
 
@@ -225,9 +228,6 @@
 
                                             </div>
                                         </div>
-
-                                    </div>
-                                    <div class="col-sm-12 col-lg-6">
 
                                         <div class="card mb-0">
                                             <h5 class="card-header">Ranks <small>(Updated daily)</small></h5>
