--- a/cmd/webserver/templates/donate.gohtml
+++ b/cmd/webserver/templates/donate.gohtml
@@ -25,60 +25,65 @@
 
         {{ template "_flashes" . }}
 
-        {{/* Perks */}}
-        <div class="card mb-3">
-            <div class="card-body">
+        {{/* Donators */}}
+        <div class="row">
+            <div class="col-12 col-lg-6">
 
+                {{/* Perks */}}
                 <div class="card mb-3">
-                    <h5 class="card-header">Level 1<span class="float-right">$1 /m</span></h5>
-                    <div class="card-body p-0">
-                        <div class="m-2"><i class="fas fa-star text-warning"></i> No ads</div>
-                        <div class="m-2"><i class="fas fa-star text-warning"></i> Donator flair</div>
-                        <div class="m-2"><i class="fas fa-star text-warning"></i> Your name in the hall of fame</div>
-                    </div>
-                </div>
+                    <div class="card-body">
 
-                <div class="card mb-3">
-                    <h5 class="card-header">Level 2<span class="float-right">$3 /m</span></h5>
-                    <div class="card-body p-0">
-                        <div class="m-2"><i class="fas fa-star text-warning"></i> All Above</div>
-                        <div class="m-2"><i class="fas fa-star text-warning"></i> Quicker profile updates</div>
-                        <div class="m-2"><i class="fas fa-star text-warning"></i> Quick add friends</div>
-                        <div class="m-2"><i class="fas fa-star text-warning"></i> Access to more data</div>
-                        <div class="m-2"><i class="fas fa-star text-warning"></i> Automatic profile updates, for you and your primary group</div>
-                    </div>
-                </div>
+                        <div class="card mb-3">
+                            <h5 class="card-header">Level 1<span class="float-right">$1 /m</span></h5>
+                            <div class="card-body p-0">
+                                <div class="m-2"><i class="fas fa-star text-warning"></i> No ads</div>
+                                <div class="m-2"><i class="fas fa-star text-warning"></i> Donator flair</div>
+                                <div class="m-2"><i class="fas fa-star text-warning"></i> Your name in the hall of fame</div>
+                            </div>
+                            <div class="card-footer p-1 text-right"><a href="https://www.patreon.com/join/gamedb/checkout?rid=2431311" target="_blank" rel="noopener">Sign Up</a></div>
+                        </div>
 
-                <div class="card">
-                    <h5 class="card-header">Level 3<span class="float-right">$15 /m</span></h5>
-                    <div class="card-body p-0">
-                        <div class="m-2"><i class="fas fa-star text-warning"></i> All Above</div>
-                        <div class="m-2"><i class="fas fa-star text-warning"></i> Unlimited access to Game DB data</div>
-                        <div class="m-2"><i class="fas fa-star text-warning"></i> <a href="/api">API</a> access</div>
-                        <div class="m-2"><i class="fas fa-star text-warning"></i> Webhooks & emails on changes</div>
-                        <div class="m-2"><i class="fas fa-star text-warning"></i> Influence the Game DB roadmap</div>
+                        <div class="card mb-3">
+                            <h5 class="card-header">Level 2<span class="float-right">$3 /m</span></h5>
+                            <div class="card-body p-0">
+                                <div class="m-2"><i class="fas fa-star text-warning"></i> All Above</div>
+                                <div class="m-2"><i class="fas fa-star text-warning"></i> Quicker profile updates</div>
+                                <div class="m-2"><i class="fas fa-star text-warning"></i> Quick add friends</div>
+                                <div class="m-2"><i class="fas fa-star text-warning"></i> Access to more data</div>
+                                <div class="m-2"><i class="fas fa-star text-warning"></i> Automatic profile updates, for you and your primary group</div>
+                            </div>
+                            <div class="card-footer p-1 text-right"><a href="https://www.patreon.com/join/gamedb/checkout?rid=2431320" target="_blank" rel="noopener">Sign Up</a></div>
+                        </div>
+
+                        <div class="card">
+                            <h5 class="card-header">Level 3<span class="float-right">$15 /m</span></h5>
+                            <div class="card-body p-0">
+                                <div class="m-2"><i class="fas fa-star text-warning"></i> All Above</div>
+                                <div class="m-2"><i class="fas fa-star text-warning"></i> Unlimited access to Game DB data</div>
+                                <div class="m-2"><i class="fas fa-star text-warning"></i> <a href="/api">API</a> access</div>
+                                <div class="m-2"><i class="fas fa-star text-warning"></i> Webhooks & emails on changes</div>
+                                <div class="m-2"><i class="fas fa-star text-warning"></i> Influence the Game DB roadmap</div>
+                            </div>
+                            <div class="card-footer p-1 text-right"><a href="https://www.patreon.com/join/gamedb/checkout?rid=2431347" target="_blank" rel="noopener">Sign Up</a></div>
+                        </div>
+
                     </div>
                 </div>
 
             </div>
-        </div>
 
-        {{/* Donators */}}
-        <div class="row">
-            <div class="col-12 col-md-6 mb-4 mb-md-0">
+            <div class="col-12 col-lg-6">
 
-                <div class="card">
+                <div class="card mb-3">
                     <div class="card-header">Top Donators</div>
                     <div class="card-body">
 
-                        <p>Coming Soon</p>
-
-                        <div class="table-responsive d-none">
-                            <table class="table table-hover table-striped table-datatable mb-0" data-ordering="false" data-order='[[1, "desc"]]'>
+                        <div class="table-responsive">
+                            <table class="table table-hover table-striped mb-0" data-ordering="false" id="top-donations" data-path="/donate/top.json">
                                 <thead class="thead-light">
                                 <tr>
                                     <th scope="col">Player</th>
-                                    <th scope="col">Total</th>
+                                    <th scope="col">Donation</th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -90,22 +95,16 @@
                     </div>
                 </div>
 
-            </div>
-            <div class="col-12 col-md-6">
-
                 <div class="card">
                     <div class="card-header">Recent Donations</div>
                     <div class="card-body">
 
-                        <p>Coming Soon</p>
-
-                        <div class="table-responsive d-none">
-                            <table class="table table-hover table-striped table-datatable mb-0" data-ordering="false" data-order='[[2, "desc"]]'>
+                        <div class="table-responsive">
+                            <table class="table table-hover table-striped mb-0" data-ordering="false" id="new-donations" data-path="/donate/latest.json">
                                 <thead class="thead-light">
                                 <tr>
                                     <th scope="col">Player</th>
-                                    <th scope="col">Amount</th>
-                                    <th scope="col">Date</th>
+                                    <th scope="col">Donation</th>
                                 </tr>
                                 </thead>
                                 <tbody>
