Show wishlist chart

--- a/cmd/webserver/assets/sass/_app.scss
+++ b/cmd/webserver/assets/sass/_app.scss
@@ -50,7 +50,7 @@
 
     #players {
 
-        #group-chart, #players-chart, #players-chart2 {
+        #group-chart, #players-chart, #players-chart2, #wishlists-chart {
             height: 300px;
         }
     }
