Add wishlists to compare page

--- a/cmd/webserver/templates/apps_compare.gohtml
+++ b/cmd/webserver/templates/apps_compare.gohtml
@@ -97,6 +97,11 @@
                         <i class="fas fa-spinner fa-spin"></i>
                     </div>
 
+                    <h5 class="mt-4">Wishlists</h5>
+                    <div id="wishlists-chart">
+                        <i class="fas fa-spinner fa-spin"></i>
+                    </div>
+
                     <h5 class="mt-4">Google Searches</h5>
                     <script type="text/javascript" src="https://ssl.gstatic.com/trends_nrtr/2213_RC01/embed_loader.js"></script>
 
