--- a/cmd/webserver/assets/sass/_apps_compare.scss
+++ b/cmd/webserver/assets/sass/_apps_compare.scss
@@ -1,5 +1,5 @@
 #apps-compare-page {
-    #group-chart, #players-chart, #players-chart2, #score-chart {
+    #group-chart, #players-chart, #players-chart2, #score-chart, #wishlists-chart {
         height: 300px;
     }
 
