--- a/cmd/webserver/templates/info.gohtml
+++ b/cmd/webserver/templates/info.gohtml
@@ -42,6 +42,7 @@
                             <li>App review scores are calculated using <a href="https://en.wikipedia.org/wiki/Additive_smoothing" target="_blank" rel="noopener">Additive Smoothing</a>.</li>
                             <li>App twitch counts only include the top 100 streamers for that app.</li>
                             <li>App trends are currently calculated use the algorithm taken from <a href="https://stackoverflow.com/a/49604913/472084" target="_blank" rel="noopener">this post</a>.</li>
+                            <li>App wishlist counts are updated daily.</li>
                         </ul>
                     </div>
                 </div>
