Remove old code

--- a/cmd/webserver/assets/sass/_player.scss
+++ b/cmd/webserver/assets/sass/_player.scss
@@ -23,28 +23,28 @@
         }
     }
 
-    .friend {
-        a, div {
-            color: $dark;
-            text-decoration: none;
-            @include text-truncate;
-
-            img {
-                height: 52px;
-                margin-right: 5px;
-            }
-
-            span {
-                margin-top: 15px;
-            }
-
-            span:hover {
-                text-decoration: underline;
-            }
-
-            span.badge {
-                text-decoration: none;
-            }
-        }
-    }
+    //.friend {
+    //    a, div {
+    //        color: $dark;
+    //        text-decoration: none;
+    //        @include text-truncate;
+    //
+    //        img {
+    //            height: 52px;
+    //            margin-right: 5px;
+    //        }
+    //
+    //        span {
+    //            margin-top: 15px;
+    //        }
+    //
+    //        span:hover {
+    //            text-decoration: underline;
+    //        }
+    //
+    //        span.badge {
+    //            text-decoration: none;
+    //        }
+    //    }
+    //}
 }
