Stop hotlinking link images

--- a/cmd/webserver/assets/sass/_player.scss
+++ b/cmd/webserver/assets/sass/_player.scss
@@ -17,6 +17,15 @@
         }
     }
 
+    #details {
+        #links {
+            img {
+                width: 20px;
+                height: 20px;
+            }
+        }
+    }
+
     #history {
         #history-chart, #ranks-chart {
             height: 250px;
