--- a/cmd/webserver/assets/sass/_app.scss
+++ b/cmd/webserver/assets/sass/_app.scss
@@ -30,10 +30,11 @@
         #links {
             div {
                 @include clearfix();
-                margin-bottom: 1px;
+                margin-bottom: 2px;
+                overflow: hidden;
 
                 img {
-                    margin-right: 2px;
+                    margin-right: 4px;
                     width: 20px;
                     height: 20px;
                     float: left;
