Default to active groups

--- a/cmd/webserver/templates/groups.gohtml
+++ b/cmd/webserver/templates/groups.gohtml
@@ -27,7 +27,7 @@
                             <label for="filter">Filter Removed</label>
                             <select class="form-control form-control-chosen" id="filter" name="filter">
                                 <option value="">All Groups</option>
-                                <option value="1">Active Groups</option>
+                                <option value="1" selected>Active Groups</option>
                                 <option value="0">Removed Groups</option>
                             </select>
                         </div>
